--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,17 @@
-.App {
-  text-align: center;
+@import url("https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css");
+
+body {
+  padding: 20px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.mainCard {
+  margin: 10px;
+  width: 40%;
+  display: inline-block;
+  background-color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.cardHeader {
+  background-image: url("https://st4.depositphotos.com/1275255/22214/i/1600/depositphotos_222145636-stock-photo-magic-card-orange-summer-graphic.jpg");
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
